--- a/arch/arm64/configs/ginna_defconfig
+++ b/arch/arm64/configs/ginna_defconfig
@@ -2843,6 +2843,7 @@ CONFIG_FB_MSM_MDSS=y
 # CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_HDMI_PANEL is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_MSM_MDSS_SPI_PANEL is not set
 CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
